# jparc-adunit

./: README.md  west.yml
app/: CMakeLists.txt  nucleo_h753zi.overlay  prj.conf
app/src/: adc_averaging_ctx.c  adc_averaging_ctx.h  adc_operation.c  adc_operation.h  dummy_trigger.c  dummy_trigger.h  enet_server.c  enet_server.h  gpio.c  gpio.h  main.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.adc_stm32_custom  adc_context_custom.h  adc_custom.h  adc_stm32_custom.c  adc_stm32_custom.h
